# 2DHeat_Transfer

./: Headers.h  README.md  desktop.ini
Photos/: desktop.ini
src/: Fucntions.cpp
src/Heat/: CMakeLists.txt  Visuallisation.py  main.cpp
src/Heat/cuda/: CMakeLists.txt  Header.h  Heat_Kernel.cu  main.cu  torch_heat.py
src/N_body/CUDA/: CMakeLists.txt  Header.h  main.cu  main_kernel.cu  particles_sample.csv
src/Waves/: CMakeLists.txt  Functions.cpp  Headers.h  Visualiisation.py  main.cpp
src/Waves/cuda/: CMakeLists.txt  Header.h  Wave_Kernel.cu  main.cu  torch_wave.py
